Modify navigation drawer, menu, and imagery

--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -16,14 +16,14 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_launcher" />
+        android:paddingBottom="@dimen/nav_header_vertical_spacing"
+        android:src="@mipmap/user_avatar" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/user_fullname"
+        android:textSize="24dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
