--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -6,16 +6,20 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:title="@string/app_name" />
+            android:title="@string/drawer_home"
+            android:enabled="false" />
         <item
             android:id="@+id/nav_map"
-            android:title="Map" />
+            android:title="@string/drawer_map" />
         <item
             android:id="@+id/nav_profile"
-            android:title="Profile" />
+            android:title="@string/drawer_profile" />
         <item
             android:id="@+id/nav_settings"
-            android:title="Settings" />
+            android:title="@string/drawer_settings" />
+        <item
+            android:id="@+id/nav_about"
+            android:title="@string/drawer_about" />
     </group>
 
 </menu>
