--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBlack"
-    tools:context=".ProfileFragment">
+    tools:context=".fragment.Profile">
 
     <FrameLayout
         android:layout_width="match_parent"
