--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorPrimaryDark">#282240</color>
     <color name="colorAccent">#847cf1</color>
     <color name="colorAccentAlpha">#70847cf1</color>
+    <color name="colorWidget">#564b83</color>
 </resources>
