Add query to the web service to check if the account exists

--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -2,7 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
-
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
@@ -10,16 +9,19 @@
             android:enabled="false" />
         <item
             android:id="@+id/nav_map"
-            android:title="@string/drawer_map" />
+            android:title="@string/drawer_map"
+            android:enabled="false" />
         <item
             android:id="@+id/nav_profile"
-            android:title="@string/drawer_profile" />
+            android:title="@string/drawer_profile"
+            android:enabled="false" />
         <item
             android:id="@+id/nav_settings"
-            android:title="@string/drawer_settings" />
+            android:title="@string/drawer_settings"
+            android:enabled="false" />
         <item
             android:id="@+id/nav_about"
-            android:title="@string/drawer_about" />
+            android:title="@string/drawer_about"
+            android:enabled="true" />
     </group>
-
 </menu>
