Add ability to reset the local profile data with a button

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -10,7 +10,7 @@
         android:id="@+id/profileAvatarBack"
         android:layout_width="match_parent"
         android:layout_height="360dp"
-        android:background="@color/colorBlack"
+        android:background="@color/colorWidget"
         android:alpha="0.4" />
 
     <FrameLayout
