--- a/app/src/main/res/menu/topbar.xml
+++ b/app/src/main/res/menu/topbar.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/logoutButton"
         android:orderInCategory="100"
         android:title="@string/navigation_logout"
         app:showAsAction="never" />
