--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -12,24 +12,34 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
+    <!--
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/drawerAvatar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/nav_header_vertical_spacing"
+        android:layout_marginBottom="@dimen/nav_header_vertical_spacing"
         android:src="@mipmap/user_avatar" />
+    -->
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/drawerAvatar"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:contentDescription="@string/app_name"
+        android:layout_marginBottom="@dimen/nav_header_vertical_spacing"
+        app:civ_border_color="@color/avatarBorder"
+        app:civ_border_width="2dp" />
 
     <TextView
+        android:id="@+id/drawerFullname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/user_fullname"
-        android:textSize="24dp"
+        android:textSize="24sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/drawerOccupation"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/user_jobtitle" />
-
+        android:layout_height="wrap_content" />
 </LinearLayout>
