--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@color/primary"
     tools:context=".fragment.About">
 
     <TextView
@@ -14,7 +14,7 @@
         android:layout_marginTop="150dp"
         android:textAlignment="center"
         android:text="@string/app_name"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/white"
         android:textSize="50sp" />
 
     <TextView
@@ -25,7 +25,7 @@
         android:layout_marginTop="400dp"
         android:textAlignment="center"
         android:text="@string/app_author"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/white"
         android:textSize="14sp" />
 
     <TextView
@@ -36,7 +36,7 @@
         android:layout_marginTop="419dp"
         android:textAlignment="center"
         android:text="@string/app_website"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/white"
         android:textSize="14sp"/>
 
     <TextView
@@ -47,7 +47,7 @@
         android:layout_marginTop="438dp"
         android:textAlignment="center"
         android:text="@string/app_sponsor"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/white"
         android:textSize="14sp"/>
 
     <TextView
@@ -58,7 +58,7 @@
         android:layout_marginTop="457dp"
         android:textAlignment="center"
         android:text="@string/app_copyright"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/white"
         android:textSize="14sp"/>
 
 </FrameLayout>
