--- a/app/src/main/res/layout/fragment_job.xml
+++ b/app/src/main/res/layout/fragment_job.xml
@@ -1,42 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="10dp">
+    android:layout_height="@dimen/job_height"
+    android:paddingLeft="@dimen/job_padding"
+    android:paddingRight="@dimen/job_padding">
     <ImageView
         android:id="@+id/jobImage"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/ic_menu_gallery" />
+        android:layout_width="@dimen/job_image_width"
+        android:layout_height="@dimen/job_image_height" />
 
-    <TextView
-        android:id="@+id/jobCompany"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="{COMPANY}"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_marginTop="12dp"
-        android:layout_marginStart="110dp" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/job_info_margin_top"
+        android:layout_marginLeft="@dimen/job_info_margin_left">
+        <TextView
+            android:id="@+id/jobCompany"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/job_company_size"
+            android:textStyle="bold"
+            android:textColor="@color/black" />
 
-    <TextView
-        android:id="@+id/jobOccupation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="{JOB_TITLE}"
-        android:textSize="16sp"
-        android:textColor="@color/black"
-        android:layout_marginTop="40dp"
-        android:layout_marginStart="110dp" />
+        <TextView
+            android:id="@+id/jobOccupation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/job_occupation_size"
+            android:textColor="@color/black" />
 
-    <TextView
-        android:id="@+id/jobSkills"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="{JOB_SKILLS}"
-        android:textSize="14sp"
-        android:textColor="@color/black"
-        android:layout_marginTop="64dp"
-        android:layout_marginStart="110dp" />
-</RelativeLayout>
+        <TextView
+            android:id="@+id/jobSkills"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/job_skills_size"
+            android:textColor="@color/black" />
+    </LinearLayout>
+</FrameLayout>
