--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,13 @@
     <dimen name="nav_header_vertical_spacing">24dp</dimen>
     <dimen name="nav_header_height">230dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="job_height">100dp</dimen>
+    <dimen name="job_padding">10dp</dimen>
+    <dimen name="job_image_width">100dp</dimen>
+    <dimen name="job_image_height">100dp</dimen>
+    <dimen name="job_company_size">18sp</dimen>
+    <dimen name="job_occupation_size">16sp</dimen>
+    <dimen name="job_skills_size">14sp</dimen>
+    <dimen name="job_info_margin_left">110dp</dimen>
+    <dimen name="job_info_margin_top">16dp</dimen>
 </resources>
