Add implementation of the job search with map markers

--- a/app/src/main/res/layout/fragment_planet.xml
+++ b/app/src/main/res/layout/fragment_planet.xml
@@ -1,13 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/primary"
+    android:orientation="vertical"
     tools:context=".fragment.Planet">
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
+        android:paddingLeft="14dp">
+        <EditText
+            android:id="@+id/jobQuery"
+            android:layout_width="240dp"
+            android:layout_height="53dp"
+            android:maxLines="1"
+            android:inputType="text"
+            android:hint="@string/job_search_hint"
+            android:textColor="@color/accent"
+            android:textColorHint="@color/passive"
+            android:backgroundTint="@color/accent" />
+
+        <Button
+            android:id="@+id/jobSearch"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/primary"
+            android:text="@string/search" />
+    </LinearLayout>
 
     <FrameLayout
         android:id="@+id/googleMap"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-
-</FrameLayout>
+</LinearLayout>
